--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "0.1.0"
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Oceananigans = "9e8cae18-63c1-5223-a75c-80ca9d6e9a09"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
